--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -13,5 +13,5 @@ jobs:
         uses: maxam2017/productive-box@master
         env:
           GH_TOKEN: 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
-          GIST_ID: 45d0d70cc21af8e6a6c8b0acc82c86cb
+          GIST_ID: https://gist.github.com/rkekrk123456/45d0d70cc21af8e6a6c8b0acc82c86cb
           TIMEZONE: Asia/Seoul
